// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`bool_from_json.test.w 1`] = `
"Error: unable to parse bool:
- bool must be boolean
    at JsonSchema.validate (<ABSOLUTE>:LINE:COL)
    at Boolean.fromJson (<ABSOLUTE>:LINE:COL)
    at new $Root (<ABSOLUTE>:LINE:COL)
    at TestRunner._createTree (<ABSOLUTE>:LINE:COL)
    at new App (<ABSOLUTE>:LINE:COL)
    at newApp (<ABSOLUTE>:LINE:COL)
    at PlatformManager.createApp (<ABSOLUTE>:LINE:COL)
    at Object.<anonymous> (<ABSOLUTE>:LINE:COL)
    at Module._compile (node:internal/modules/cjs/loader:1469:14)
    at Module._extensions..js (node:internal/modules/cjs/loader:1548:10)

Tests 1 failed (1)
Snapshots 1 skipped
Test Files 1 failed (1)
Duration <DURATION>"
`;

exports[`fail_to_start_simulator.test.w 1`] = `
"[ERROR] dep_on_failing_resource | Error: Failed to start container: Command "docker pull" exited with non-zero code 1 (see verbose logs)
[ERROR] dep_on_failing_resource | Error: Unable to resolve attribute 'host_port' for resource "root/Default/Container" referenced by "root/Default/test:dep_on_failing_resource/Handler"
[ERROR] dep_on_failing_resource | Error: Unable to resolve attribute 'host_port' for resource "root/Default/Container" referenced by "root/Default/test:dep_on_failing_resource/Handler"
Error: Failed to start resources: "root/Default/test:dep_on_failing_resource/Handler", "root/cloud.TestRunner"
    at Simulator.startResources (<ABSOLUTE>:LINE:COL)
    at async Simulator.start (<ABSOLUTE>:LINE:COL)
    at async testSimulator (<ABSOLUTE>:LINE:COL)
    at async testOne (<ABSOLUTE>:LINE:COL)
    at async testFile (<ABSOLUTE>:LINE:COL)
    at async PromisePoolExecutor.waitForActiveTaskToFinish (<ABSOLUTE>:LINE:COL)
    at async PromisePoolExecutor.waitForProcessingSlot (<ABSOLUTE>:LINE:COL)
    at async PromisePoolExecutor.process (<ABSOLUTE>:LINE:COL)
    at async PromisePoolExecutor.start (<ABSOLUTE>:LINE:COL)
    at async Object.test (<ABSOLUTE>:LINE:COL)
    at async Command.<anonymous> (<ABSOLUTE>:LINE:COL)

Tests 1 failed (1)
Snapshots 1 skipped
Test Files 1 failed (1)
Duration <DURATION>"
`;

exports[`inflight_stacktraces.test.w 1`] = `
"fail ┌ inflight_stacktraces.test.wsim » root/Default/test:assert              
     │ Error: assertion failed: false
     │   --> ../../../tests/error/inflight_stacktraces.test.w:7:3
     │   | let bucket = new cloud.Bucket();
     │   | 
     │   | test "assert" {
     │ 7 |   assert(false);
     │   |   ^
     └ at <ABSOLUTE>/inflight_stacktraces.test.w:7:3
fail ┌ inflight_stacktraces.test.wsim » root/Default/test:assert with message 
     │ Error: assertion failed: x is false
     │    --> ../../../tests/error/inflight_stacktraces.test.w:27:3
     │    | 
     │    | test "assert with message" {
     │    |   let x = false;
     │ 27 |   assert(x, "x is false");
     │    |   ^
     └ at <ABSOLUTE>/inflight_stacktraces.test.w:27:3
fail ┌ inflight_stacktraces.test.wsim » root/Default/test:bucket failed delete
     │ Error: Object does not exist (key=doesn't exist).
     │    --> ../../../tests/error/inflight_stacktraces.test.w:15:3
     │    | }
     │    | 
     │    | test "bucket failed delete" {
     │ 15 |   bucket.delete("doesn't exist", mustExist: true);
     │    |   ^
     └ at <ABSOLUTE>/inflight_stacktraces.test.w:15:3
fail ┌ inflight_stacktraces.test.wsim » root/Default/test:expect.equal        
     │ Error: AssertionError [ERR_ASSERTION]: Expected values to be strictly deep-equal:
     │ 
     │ 1 !== 2
     │ 
     │    --> ../../../tests/error/inflight_stacktraces.test.w:11:3
     │    | }
     │    | 
     │    | test "expect.equal" {
     │ 11 |   expect.equal(1,2 );
     │    |   ^
     └ at <ABSOLUTE>/inflight_stacktraces.test.w:11:3
fail ┌ inflight_stacktraces.test.wsim » root/Default/test:throw from closure  
     │ Error: ouch
     │    --> ../../../tests/error/inflight_stacktraces.test.w:20:5
     │    | 
     │    | test "throw from closure" {
     │    |   let closure = inflight () => {
     │ 20 |     throw "ouch";
     │    |     ^
     │ at closure <ABSOLUTE>/inflight_stacktraces.test.w:20:5
     └ at <ABSOLUTE>/inflight_stacktraces.test.w:22:3

Tests 5 failed (5)
Snapshots 1 skipped
Test Files 1 failed (1)
Duration <DURATION>"
`;

exports[`invalid-token.test.w 1`] = `
"[ERROR] test cannot access unresolved token | Error: Unable to resolve attribute 'fake-attr' for resource "root/Default/MyResource/Resource" referenced by "root/Default/test:test cannot access unresolved token/Handler"
[ERROR] test cannot access unresolved token | Error: Unable to resolve attribute 'fake-attr' for resource "root/Default/MyResource/Resource" referenced by "root/Default/test:test cannot access unresolved token/Handler"
Error: Failed to start resources: "root/Default/test:test cannot access unresolved token/Handler", "root/cloud.TestRunner"
    at Simulator.startResources (<ABSOLUTE>:LINE:COL)
    at process.processTicksAndRejections (node:internal/process/task_queues:95:5)
    at async Simulator.start (<ABSOLUTE>:LINE:COL)
    at async testSimulator (<ABSOLUTE>:LINE:COL)
    at async testOne (<ABSOLUTE>:LINE:COL)
    at async testFile (<ABSOLUTE>:LINE:COL)
    at async PromisePoolExecutor.waitForActiveTaskToFinish (<ABSOLUTE>:LINE:COL)
    at async PromisePoolExecutor.waitForProcessingSlot (<ABSOLUTE>:LINE:COL)
    at async PromisePoolExecutor.process (<ABSOLUTE>:LINE:COL)
    at async PromisePoolExecutor.start (<ABSOLUTE>:LINE:COL)
    at async Object.test (<ABSOLUTE>:LINE:COL)
    at async Command.<anonymous> (<ABSOLUTE>:LINE:COL)

Tests 1 failed (1)
Snapshots 1 skipped
Test Files 1 failed (1)
Duration <DURATION>"
`;

exports[`num_from_str.test.w 1`] = `
"Error: unable to parse "123a" as a number
    at <ABSOLUTE>/macros.js:361:55
    at exports.__Number_fromStr (<ABSOLUTE>:LINE:COL)
    at new $Root (<ABSOLUTE>:LINE:COL)
    at TestRunner._createTree (<ABSOLUTE>:LINE:COL)
    at new App (<ABSOLUTE>:LINE:COL)
    at newApp (<ABSOLUTE>:LINE:COL)
    at PlatformManager.createApp (<ABSOLUTE>:LINE:COL)
    at Object.<anonymous> (<ABSOLUTE>:LINE:COL)
    at Module._compile (node:internal/modules/cjs/loader:1469:14)
    at Module._extensions..js (node:internal/modules/cjs/loader:1548:10)

Tests 1 failed (1)
Snapshots 1 skipped
Test Files 1 failed (1)
Duration <DURATION>"
`;

exports[`number_from_json.test.w 1`] = `
"Error: unable to parse num:
- num must be number
    at JsonSchema.validate (<ABSOLUTE>:LINE:COL)
    at Number.fromJson (<ABSOLUTE>:LINE:COL)
    at new $Root (<ABSOLUTE>:LINE:COL)
    at TestRunner._createTree (<ABSOLUTE>:LINE:COL)
    at new App (<ABSOLUTE>:LINE:COL)
    at newApp (<ABSOLUTE>:LINE:COL)
    at PlatformManager.createApp (<ABSOLUTE>:LINE:COL)
    at Object.<anonymous> (<ABSOLUTE>:LINE:COL)
    at Module._compile (node:internal/modules/cjs/loader:1469:14)
    at Module._extensions..js (node:internal/modules/cjs/loader:1548:10)

Tests 1 failed (1)
Snapshots 1 skipped
Test Files 1 failed (1)
Duration <DURATION>"
`;

exports[`repeat_construct_id.test.w 1`] = `
"Error: There is already a Construct with name 'Bucket' in $Root [Default]
    at Node.addChild (<ABSOLUTE>:LINE:COL)
    at new Node (<ABSOLUTE>:LINE:COL)
    at new Construct (<ABSOLUTE>:LINE:COL)
    at new Bucket (<ABSOLUTE>:LINE:COL)
    at new Bucket (<ABSOLUTE>:LINE:COL)
    at Platform.newInstance (<ABSOLUTE>:LINE:COL)
    at ClassFactory.tryNewInstance (<ABSOLUTE>:LINE:COL)
    at ClassFactory.new (<ABSOLUTE>:LINE:COL)
    at new $Root (<ABSOLUTE>:LINE:COL)
    at TestRunner._createTree (<ABSOLUTE>:LINE:COL)

Tests 1 failed (1)
Snapshots 1 skipped
Test Files 1 failed (1)
Duration <DURATION>"
`;

exports[`repeat_construct_id2.test.w 1`] = `
"Error: There is already a Construct with name 'bucket-name' in $Root [Default]
    at Node.addChild (<ABSOLUTE>:LINE:COL)
    at new Node (<ABSOLUTE>:LINE:COL)
    at new Construct (<ABSOLUTE>:LINE:COL)
    at new Bucket (<ABSOLUTE>:LINE:COL)
    at new Bucket (<ABSOLUTE>:LINE:COL)
    at Platform.newInstance (<ABSOLUTE>:LINE:COL)
    at ClassFactory.tryNewInstance (<ABSOLUTE>:LINE:COL)
    at ClassFactory.new (<ABSOLUTE>:LINE:COL)
    at new $Root (<ABSOLUTE>:LINE:COL)
    at TestRunner._createTree (<ABSOLUTE>:LINE:COL)

Tests 1 failed (1)
Snapshots 1 skipped
Test Files 1 failed (1)
Duration <DURATION>"
`;

exports[`string_from_json.test.w 1`] = `
"Error: unable to parse string:
- string must be string
    at JsonSchema.validate (<ABSOLUTE>:LINE:COL)
    at String.fromJson (<ABSOLUTE>:LINE:COL)
    at new $Root (<ABSOLUTE>:LINE:COL)
    at TestRunner._createTree (<ABSOLUTE>:LINE:COL)
    at new App (<ABSOLUTE>:LINE:COL)
    at newApp (<ABSOLUTE>:LINE:COL)
    at PlatformManager.createApp (<ABSOLUTE>:LINE:COL)
    at Object.<anonymous> (<ABSOLUTE>:LINE:COL)
    at Module._compile (node:internal/modules/cjs/loader:1469:14)
    at Module._extensions..js (node:internal/modules/cjs/loader:1548:10)

Tests 1 failed (1)
Snapshots 1 skipped
Test Files 1 failed (1)
Duration <DURATION>"
`;

exports[`struct_from_json_1.test.w 1`] = `
"Error: unable to parse Person:
- Person/age must be number
    at JsonSchema.validate (<ABSOLUTE>:LINE:COL)
    at JsonSchema._fromJson (<ABSOLUTE>:LINE:COL)
    at exports.__Struct_fromJson (<ABSOLUTE>:LINE:COL)
    at new $Root (<ABSOLUTE>:LINE:COL)
    at TestRunner._createTree (<ABSOLUTE>:LINE:COL)
    at new App (<ABSOLUTE>:LINE:COL)
    at newApp (<ABSOLUTE>:LINE:COL)
    at PlatformManager.createApp (<ABSOLUTE>:LINE:COL)
    at Object.<anonymous> (<ABSOLUTE>:LINE:COL)
    at Module._compile (node:internal/modules/cjs/loader:1469:14)

Tests 1 failed (1)
Snapshots 1 skipped
Test Files 1 failed (1)
Duration <DURATION>"
`;

exports[`struct_from_json_2.test.w 1`] = `
"Error: unable to parse Student:
- Student must have required property 'advisor'
- Student/age must be number
    at JsonSchema.validate (<ABSOLUTE>:LINE:COL)
    at JsonSchema._fromJson (<ABSOLUTE>:LINE:COL)
    at exports.__Struct_fromJson (<ABSOLUTE>:LINE:COL)
    at new $Root (<ABSOLUTE>:LINE:COL)
    at TestRunner._createTree (<ABSOLUTE>:LINE:COL)
    at new App (<ABSOLUTE>:LINE:COL)
    at newApp (<ABSOLUTE>:LINE:COL)
    at PlatformManager.createApp (<ABSOLUTE>:LINE:COL)
    at Object.<anonymous> (<ABSOLUTE>:LINE:COL)
    at Module._compile (node:internal/modules/cjs/loader:1469:14)

Tests 1 failed (1)
Snapshots 1 skipped
Test Files 1 failed (1)
Duration <DURATION>"
`;

exports[`struct_from_json_3.test.w 1`] = `
"Error: unable to parse Student:
- Student/advisors/1/id must be string
- Student/age must be number
    at JsonSchema.validate (<ABSOLUTE>:LINE:COL)
    at JsonSchema._fromJson (<ABSOLUTE>:LINE:COL)
    at exports.__Struct_fromJson (<ABSOLUTE>:LINE:COL)
    at new $Root (<ABSOLUTE>:LINE:COL)
    at TestRunner._createTree (<ABSOLUTE>:LINE:COL)
    at new App (<ABSOLUTE>:LINE:COL)
    at newApp (<ABSOLUTE>:LINE:COL)
    at PlatformManager.createApp (<ABSOLUTE>:LINE:COL)
    at Object.<anonymous> (<ABSOLUTE>:LINE:COL)
    at Module._compile (node:internal/modules/cjs/loader:1469:14)

Tests 1 failed (1)
Snapshots 1 skipped
Test Files 1 failed (1)
Duration <DURATION>"
`;

exports[`struct_from_json_4.test.w 1`] = `
"Error: unable to parse Student:
- Student/advisors must NOT have duplicate items (items ## 0 and 1 are identical)
    at JsonSchema.validate (<ABSOLUTE>:LINE:COL)
    at JsonSchema._fromJson (<ABSOLUTE>:LINE:COL)
    at exports.__Struct_fromJson (<ABSOLUTE>:LINE:COL)
    at new $Root (<ABSOLUTE>:LINE:COL)
    at TestRunner._createTree (<ABSOLUTE>:LINE:COL)
    at new App (<ABSOLUTE>:LINE:COL)
    at newApp (<ABSOLUTE>:LINE:COL)
    at PlatformManager.createApp (<ABSOLUTE>:LINE:COL)
    at Object.<anonymous> (<ABSOLUTE>:LINE:COL)
    at Module._compile (node:internal/modules/cjs/loader:1469:14)

Tests 1 failed (1)
Snapshots 1 skipped
Test Files 1 failed (1)
Duration <DURATION>"
`;

exports[`struct_from_json_5.test.w 1`] = `
"Error: unable to parse Foo:
- Foo/names/c must be string
    at JsonSchema.validate (<ABSOLUTE>:LINE:COL)
    at JsonSchema._fromJson (<ABSOLUTE>:LINE:COL)
    at exports.__Struct_fromJson (<ABSOLUTE>:LINE:COL)
    at new $Root (<ABSOLUTE>:LINE:COL)
    at TestRunner._createTree (<ABSOLUTE>:LINE:COL)
    at new App (<ABSOLUTE>:LINE:COL)
    at newApp (<ABSOLUTE>:LINE:COL)
    at PlatformManager.createApp (<ABSOLUTE>:LINE:COL)
    at Object.<anonymous> (<ABSOLUTE>:LINE:COL)
    at Module._compile (node:internal/modules/cjs/loader:1469:14)

Tests 1 failed (1)
Snapshots 1 skipped
Test Files 1 failed (1)
Duration <DURATION>"
`;

exports[`utilities.test.w 1`] = `
"Error: assertion failed: false
    at Object.assert (<ABSOLUTE>:LINE:COL)
    at new $Root (<ABSOLUTE>:LINE:COL)
    at TestRunner._createTree (<ABSOLUTE>:LINE:COL)
    at new App (<ABSOLUTE>:LINE:COL)
    at newApp (<ABSOLUTE>:LINE:COL)
    at PlatformManager.createApp (<ABSOLUTE>:LINE:COL)
    at Object.<anonymous> (<ABSOLUTE>:LINE:COL)
    at Module._compile (node:internal/modules/cjs/loader:1469:14)
    at Module._extensions..js (node:internal/modules/cjs/loader:1548:10)
    at Module.load (node:internal/modules/cjs/loader:1288:32)

Tests 1 failed (1)
Snapshots 1 skipped
Test Files 1 failed (1)
Duration <DURATION>"
`;
